BPER/DEVF/force-app/main/default/objects/Anomalia__c/Anomalia__c.object-meta.xml
<CustomObject>
    <label>Anomalia</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Anomalia Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Anomalie</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>