BPER/DEVF/force-app/main/default/objects/Anomalia__c/fields/Intestazione_Cointestazione__c.field-meta.xml
<CustomField>
    <fullName>Intestazione_Cointestazione__c</fullName>
    <formula>PTF_Cointestazione__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intestazione-Cointestazione</label>
    <type>Text</type>
</CustomField>