BPER/DEVF/force-app/main/default/objects/Anomalia__c/fields/Intestazione_Primario__c.field-meta.xml
<CustomField>
    <fullName>Intestazione_Primario__c</fullName>
    <formula>PTF_Primario__r.FirstName+&apos; &apos; + PTF_Primario__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intestazione-Primario</label>
    <type>Text</type>
</CustomField>