BPER/DEVF/force-app/main/default/objects/Anomalia__c/fields/PTF_Check_Anomalia__c.field-meta.xml
<CustomField>
    <fullName>PTF_Check_Anomalia__c</fullName>
    <formula>AND( PTF_Primario__r.PTF_Portafoglio__c  &lt;&gt;  PTF_Cointestazione__r.PTF_Portafoglio__c ,
   PTF_Cointestazione__r.PTF_ModelloDiServizio__c   &lt;&gt; &quot;Consulenti Finanziari&quot; ,
   PTF_Cointestazione__r.PTF_ModelloDiServizio__c   &lt;&gt; &quot;Residuale&quot; , 
  PTF_Primario__r.PTF_ModelloDiServizio__c &lt;&gt; &quot;Consulenti Finanziari&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Anomalia</label>
    <type>Checkbox</type>
</CustomField>