BPER/DEVF/force-app/main/default/objects/Anomalia__c/fields/PTF_Check_Area_188_CO__c.field-meta.xml
<CustomField>
    <fullName>PTF_Check_Area_188_CO__c</fullName>
    <formula>OR (
AND (
OR (
PTF_Primario__r.PTF_Area__r.PTF_IdCED__c = $User.PTF_IdCEDPadre__c,
PTF_Cointestazione__r.PTF_Area__r.PTF_IdCED__c = $User.PTF_IdCEDPadre__c
),
$User.PTF_IdCEDPadre__c != null,
$User.PTF_TipologiaUO__c = &apos;AltraUnitaOrganizzativa&apos;
),
AND(
OR(
PTF_Primario__r.PTF_Area__r.PTF_IdCED__c == $User.idced__c,
PTF_Cointestazione__r.PTF_Area__r.PTF_IdCED__c == $User.idced__c
),
$User.idced__c != null
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Area 188/CO</label>
    <type>Checkbox</type>
</CustomField>