BPER/DEVF/force-app/main/default/objects/Anomalia__c/fields/PTF_Check_Filiale_188_CO__c.field-meta.xml
<CustomField>
    <fullName>PTF_Check_Filiale_188_CO__c</fullName>
    <formula>OR (
AND(
OR (
PTF_Primario__r.PTF_Capofila__r.PTF_IdCED__c == $User.idced__c,
PTF_Cointestazione__r.PTF_Capofila__r.PTF_IdCED__c == $User.idced__c
),
$User.idced__c != null
),
AND(
OR(
PTF_Primario__r.PTF_Filiale__r.PTF_IdCED__c == $User.idced__c,
PTF_Cointestazione__r.PTF_Filiale__r.PTF_IdCED__c == $User.idced__c
),
$User.idced__c != null
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Filiale 188/CO</label>
    <type>Checkbox</type>
</CustomField>