BPER/DEVF/force-app/main/default/objects/Anomalia__c/fields/PTF_Cointestazione__c.field-meta.xml
<CustomField>
    <fullName>PTF_Cointestazione__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PTF Cointestazione</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Anomalie (PTF Cointestazione)</relationshipLabel>
    <relationshipName>AnomalieCointestazione</relationshipName>
    <type>Lookup</type>
</CustomField>