BPER/DEVF/force-app/main/default/objects/Anomalia__c/fields/PTF_Intestazione_Cointestazione__c.field-meta.xml
<CustomField>
    <fullName>PTF_Intestazione_Cointestazione__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; PTF_Cointestazione__c, PTF_Cointestazione__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intestazione Cointestazione</label>
    <type>Text</type>
</CustomField>