BPER/DEVF/force-app/main/default/objects/Anomalia__c/fields/PTF_Intestazione_Primario__c.field-meta.xml
<CustomField>
    <fullName>PTF_Intestazione_Primario__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; PTF_Primario__c, PTF_Primario__r.FirstName+&apos; &apos; + PTF_Primario__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intestazione Primario</label>
    <type>Text</type>
</CustomField>