BPER/DEVF/force-app/main/default/objects/Anomalia__c/fields/PTF_Microportafoglio_Cointestazione__c.field-meta.xml
<CustomField>
    <fullName>PTF_Microportafoglio_Cointestazione__c</fullName>
    <formula>PTF_Cointestazione__r.PTF_Portafoglio__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Microportafoglio Cointestazione</label>
    <type>Text</type>
</CustomField>