BPER/DEVF/force-app/main/default/objects/Anomalia__c/fields/PTF_Microportafoglio_Primario__c.field-meta.xml
<CustomField>
    <fullName>PTF_Microportafoglio_Primario__c</fullName>
    <formula>PTF_Primario__r.PTF_Portafoglio__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Microportafoglio Primario</label>
    <type>Text</type>
</CustomField>