BPER/DEVF/force-app/main/default/objects/Anomalia__c/fields/PTF_NDG_Cointestazione__c.field-meta.xml
<CustomField>
    <fullName>PTF_NDG_Cointestazione__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; PTF_Cointestazione__c, PTF_Cointestazione__r.CRM_NDG__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NDG Cointestazione</label>
    <type>Text</type>
</CustomField>