BPER/DEVF/force-app/main/default/objects/Anomalia__c/fields/PTF_NDG_Primario__c.field-meta.xml
<CustomField>
    <fullName>PTF_NDG_Primario__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; PTF_Primario__c,  PTF_Primario__r.CRM_NDG__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NDG Primario</label>
    <type>Text</type>
</CustomField>