BPER/DEVF/force-app/main/default/objects/Anomalia__c/fields/PTF_Primario__c.field-meta.xml
<CustomField>
    <fullName>PTF_Primario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PTF Primario</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Anomalie</relationshipLabel>
    <relationshipName>Anomalie</relationshipName>
    <type>Lookup</type>
</CustomField>