BPER/DEVF/force-app/main/default/objects/Anomalia__c/fields/PTF_Relazione_di_cointestazione__c.field-meta.xml
<CustomField>
    <fullName>PTF_Relazione_di_cointestazione__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relazione di cointestazione</label>
    <referenceTo>CRM_AccountAccountJointOwnershipRelation__c</referenceTo>
    <relationshipLabel>Anomalie</relationshipLabel>
    <relationshipName>Anomalie</relationshipName>
    <type>Lookup</type>
</CustomField>