BPER/DEVF/force-app/main/default/objects/Anomalia__c/fields/PTF_Stessa_Filiale__c.field-meta.xml
<CustomField>
    <fullName>PTF_Stessa_Filiale__c</fullName>
    <formula>PTF_Primario__r.PTF_Filiale__c =   PTF_Cointestazione__r.PTF_Filiale__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stessa Filiale</label>
    <type>Checkbox</type>
</CustomField>