BPER/DEVF/force-app/main/default/objects/Anomalia__c/fields/PTF_Stesso_M_MDS__c.field-meta.xml
<CustomField>
    <fullName>PTF_Stesso_M_MDS__c</fullName>
    <formula>TEXT(PTF_Primario__r.ModelloDiServizio__c) = TEXT(PTF_Cointestazione__r.ModelloDiServizio__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stesso M-MDS</label>
    <type>Checkbox</type>
</CustomField>